# study-assistant

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  Makefile  README.md  VERSIONS  docker-compose.yml  package.json  prometheus.yml  pyproject.toml  pytest.ini  railway.json  version.py  watermarks.db
.claude/: CLAUDE.md
.github/scripts/: bump-version.sh
.github/workflows/: build-dev.yaml  build.yml  bump-version.yml  ci.yaml  e2e-tests.yaml  lint.yml
.zed/: settings.json
alembic/: env.py
api/: .env.example  Dockerfile  pyproject.toml  pytest.ini  version.py
api/alembic/: env.py
api/alembic/versions/: 036b508973f6_merge_heads.py  20260413_0002_create_validation_history.py  20260415_0001_init_scrub_schema.py  20260415_0002_add_api_keys.py  20260415_0003_add_integrations.py  20260415_0004_drop_integrations_unique.py  20260416_0003_add_validation_jobs.py  574ce742c860_rename_count_to_email_validations.py
api/e2e_tests/: test_validation_flow.py
api/scripts/: create-api-client.sh  create-web-client.sh  migrate.sh
api/src/: main.py
api/src/scrub/: auth.py  settings.py
api/src/scrub/dto/: bulk_validation.py  history.py  jobs.py  validation.py
api/src/scrub/jobs/: celery_app.py  worker.py
api/src/scrub/models/: history_store.py  integration_store.py  user_store.py  validation.py  validation_job_store.py  watermark_store.py  webhook_store.py
api/src/scrub/repositories/: api_key_repository.py  history_repository.py  integration_repository.py  user_repository.py  validation_job_repository.py  webhook_repository.py
api/src/scrub/routers/: api_key_router.py  history_router.py  jobs_router.py  listmonk_router.py  postmark_router.py  user_router.py  validation_router.py  webhook_router.py
api/src/scrub/services/: Listmonk.py  dns_service.py  enrichment_service.py  listmonk.py  listmonk_service.py  validation_orchestrator.py  validation_service.py  webhook_service.py
api/src/scrub/storage/: api_key_store.py  history_store.py  integration_store.py  user_store.py  webhook_store.py
api/src/scrub/tests/: test_dns_service_logic.py  test_history.py  test_listmonk_validator.py  test_validation.py
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: App.jsx  index.css
docs/: api.md  architecture.md  client.json  deployment.md
e2e_tests/: test_validation_flow.py
grafana/: mail-validation-dashboard.json  scrub-dashboard.json
scripts/: create-api-client.sh
server/: .dockerignore  .env.example  package-lock.json  package.json  pytest.ini  server.js
src/: main.py
web/: .env.example  Dockerfile  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+177 files in other folders)
